# plonky2-ecdsa

./: Cargo.toml  rust-toolchain.toml
src/: lib.rs
src/gadgets/: biguint.rs  curve_msm.rs  curve_windowed_mul.rs  glv.rs  nonnative.rs  split_nonnative.rs
