[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
num = { version = "0.4.0", default-features = false }
plonky2 = { git = "https://github.com/0xPARC/plonky2", rev = "109d517d09c210ae4c2cee381d3e3fbc04aa3812" }
plonky2_maybe_rayon = { git = "https://github.com/0xPARC/plonky2", rev = "109d517d09c210ae4c2cee381d3e3fbc04aa3812" }
plonky2_u32 = { git = "https://github.com/ax0/plonky2-u32", rev = "cb8e2d9681eb06d069157edbb5ec1d05038611c4" }
rand = "0.8.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
